--- a/a01_执行流程.md
+++ b/a01_执行流程.md
@@ -14,14 +14,28 @@ git push origin main
 
 
 ```bash
+
+# 第一次提交
+git init
+git add . 
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/erthorpabar/github-docker-CICD.git
+git push -u origin main
+
+# 后续提交
+git add .
+git commit -m "xxx"
+git push origin main
+
 # 创建 README.md（如果还没有的话）
 echo "# github-docker-CICD" >> README.md
 
 # 初始化 git 仓库
 git init
 
-# 添加文件
-git add README.md
+# 添加所有文件
+git add .
 
 # 提交更改
 git commit -m "first commit"
