--- a/a01_执行流程.md
+++ b/a01_执行流程.md
@@ -18,10 +18,10 @@ git push origin main
 # 第一次提交
 git init
 git add . 
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/erthorpabar/github-docker-CICD.git
-git push -u origin main
+git commit -m "first commit" # 提交更改
+git branch -M main # 创建main分支
+git remote add origin https://github.com/erthorpabar/github-docker-CICD.git # 推送位置
+git push -u origin main # 推送
 
 # 后续提交
 git add .
